--- a/.env
+++ b/.env
@@ -21,11 +21,11 @@ APP_SECRET=7a8cfec597a0d71e1befe748d9e92086
 
 COMPOSE_PROJECT_NAME=bookstore
 
-#users ids could retrieved by the command `id $USER`
-PUID=1000
-PGID=1000
-
-POSTGRES_PORT=54322
-POSTGRES_DB=postgres
-POSTGRES_USER=user
-POSTGRES_PASSWORD=user
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
+DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+###< doctrine/doctrine-bundle ###
