--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,5 @@
 version: '3.8'
 services:
-  postgres_db:
-    container_name: postgres_db1
-    build:
-      context: ./.docker/postgres
-    ports:
-      - ${POSTGRES_PORT}:5432
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
   apache:
     build: ./.docker/apache
     ports:
@@ -28,3 +18,21 @@ services:
     volumes:
       - .:/var/www/html:rw
       - ./.docker/php/logs:/app/var/logs:rw
+###> doctrine/doctrine-bundle ###
+  database:
+    image: postgres:${POSTGRES_VERSION:-15}-alpine
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB:-app}
+      # You should definitely change the password in production
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-!ChangeMe!}
+      POSTGRES_USER: ${POSTGRES_USER:-app}
+    volumes:
+      - database_data:/var/lib/postgresql/data:rw
+      # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
+      # - ./docker/db/data:/var/lib/postgresql/data:rw
+###< doctrine/doctrine-bundle ###
+
+volumes:
+###> doctrine/doctrine-bundle ###
+  database_data:
+###< doctrine/doctrine-bundle ###
