--- a/.docker/php/Dockerfile
+++ b/.docker/php/Dockerfile
@@ -9,7 +9,7 @@ RUN apk add --update \
     nodejs \
     yarn
 
-RUN apk add --no-cache libpq-dev && docker-php-ext-install pdo_pgsql
+RUN apk add --no-cache libpq-dev && docker-php-ext-install pdo pdo_pgsql
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer && \
     ln -s $(composer config --global home) /root/composer
