--- a/.env
+++ b/.env
@@ -27,5 +27,5 @@ COMPOSE_PROJECT_NAME=bookstore
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+DATABASE_URL="postgresql://postgres:12345@postgres2:5432/postgres?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
