--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "symfony/yaml": "5.4.*"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.5",
         "phpunit/phpunit": "^9.6",
         "symfony/browser-kit": "5.4.*",
         "symfony/css-selector": "5.4.*",
