--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,7 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-
+    phone.validator.url: 'http://apilayer.net/api/validate'
+    phone.validator.access.key: '523c43cd7de287d9a360ad65a85e94c3'
 services:
     # default configuration for services in *this* file
     _defaults:
@@ -19,6 +20,10 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
-
+    App\Service\PhoneValidation:
+        arguments:
+            $validatorUrl: '%phone.validator.url%'
+            $accessKey: '%phone.validator.access.key%'
+    App\Service\PhoneValidationInterface: '@App\Service\PhoneValidation'
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
